# dictionary

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
dictionary/: __init__.py  app.py  search.py
dictionary/static/: app.js  autocomplete.js  styles.css
dictionary/templates/: index.html
docs/: ingenieria-inversa.md
site/: README.md  index.php  styles.css
tests/: test_render_gloss_html.py
tools/: analyze_slagro.py  build_raw_dictionary.py  build_site_dictionary.py  build_site_sqlite.py  inspect_unilex.py
