[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dictionary"
version = "0.1.0"
description = "FastAPI frontend for the reconstructed UniLex dictionaries"
requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard]>=0.115.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dictionary"]

[tool.fastapi]
entrypoint = "dictionary.app:app"
